--- a/clonepage.html
+++ b/clonepage.html
@@ -13,6 +13,7 @@
         <div class="row">
             <div class="col-1"></div>
             <div class="col-10">
+                <a href="index.html">Go To Home</a>
                 <h1 id="header">Welcome User </h1> <br>
                 <div>
                     <p id="fetchh" class="text-muted">Open your Repositories by clicking Fetch...</p>
